/**
 * Copyright 2017 Ambud Sharma
 * 
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 * 		http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.srotya.sidewinder.cluster.rpc";
option optimize_for = SPEED;

package rpcs;

import "binary.proto";

service ClusteredWriteService {

	rpc WriteSingleDataPoint (SingleData) returns (Ack) {}

	rpc WriteBatchDataPoint (BatchData) returns (Ack) {}
	
	rpc WriteSeriesPoint (RawTimeSeriesBucket) returns (Ack) {}

}

service ReplicationService {

	rpc ReadTimeseriesBucket (RawTimeSeriesBucketRequest) returns (RawTimeSeriesBucketResponse) {}
	
	rpc FetchTimeseriesDataAtOffset (RawTimeSeriesOffsetRequest) returns (RawTimeSeriesOffsetResponse) {}
	
	rpc BatchFetchTimeseriesDataAtOffset (BatchRawTimeSeriesOffsetRequest) returns (BatchRawTimeSeriesOffsetResponse) {}

}


message RawTimeSeriesBucketResponse {
	
	int64 messageId = 1;
	string dbName = 2;
	string measurementName = 3;
	string valueFieldName = 4;
	int64 blockTimestamp = 5;
	bool fp = 6;
	repeated string tags = 7;
	repeated Bucket buckets = 8;
	
}

message BatchRawTimeSeriesOffsetRequest {

	int64 messageId = 1;
	repeated RawTimeSeriesOffsetRequest requests = 2;
	
}

message BatchRawTimeSeriesOffsetResponse {

	int64 messageId = 1;
	repeated RawTimeSeriesOffsetRequest responses = 2;

}

message RawTimeSeriesOffsetRequest {

	int64 messageId = 1;
	string dbName = 2;
	string measurementName = 3;
	string valueFieldName = 4;
	int64 blockTimestamp = 5;
	int32 timeBucketSize = 6;
	repeated string tags = 7;
	int32 offset = 8;

}

message RawTimeSeriesOffsetResponse {

	int64 messageId = 1;
	string dbName = 2;
	string measurementName = 3;
	string valueFieldName = 4;
	int64 blockTimestamp = 5;
	int32 timeBucketSize = 6;
	repeated string tags = 7;
	bytes data = 8;
	int32 offset = 9;
	int64 nextTimestamp = 10;

}

message RawTimeSeriesBucketRequest {

	int64 messageId = 1;
	string dbName = 2;
	string measurementName = 3;
	string valueFieldName = 4;
	int64 blockTimestamp = 5;
	int32 timeBucketSize = 6;
	repeated string tags = 7;

}

